--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -42,6 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-    implementation "com.github.lisawray.groupie:groupie:2.9.0"
-    implementation "com.github.lisawray.groupie:groupie-viewbinding:2.9.0"
+//    implementation "com.github.lisawray.groupie:groupie:2.9.0"
+//    implementation "com.github.lisawray.groupie:groupie-viewbinding:2.9.0"
 }
